Début du refactor de l'utilisation des lambdas et des streams